# package-tracker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.prod  README.md  REFACTOR-LOG.md  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_imap_settings.py  2026_02_13_2142-9299dae441a6_initial_schema.py  2026_02_13_2142-f3e69a298ca7_add_imap_settings.py  2026_02_13_2305-f526231b0a34_add_worker_stats_table.py  2026_02_14_0809-26cc9fb6568a_add_email_scans_and_scan_history_.py  2026_02_14_1415-9cc36a87ec5f_initial_schema_with_queue_architecture.py  2026_02_14_1700-b641c7ecd01d_add_idle_support_fields_to_email_.py  2026_02_14_1819-de6620fdd307_add_module_config_table.py  2026_02_14_1825-0767203c92d8_add_global_mail_config_table.py  2026_02_14_1827-47052895e669_add_user_sender_address_table.py  2026_02_14_1830-d848cddfc123_make_processed_email_account_id_.py  2026_02_14_2100-26cf53a23140_remove_processing_delay_sec.py  2026_02_14_2200-a3f1b2c4d5e6_drop_is_active_from_global_mail_config.py  2026_02_14_2244-1751fdc3a36b_add_priority_to_module_config.py  (+3 more)
backend/app/: cli.py  config.py  database.py  main.py
backend/app/api/: llm.py  (+18 more)
backend/tests/: conftest.py  test_accounts.py  test_api_keys.py  test_auth.py  test_core.py  test_email_processor.py  test_fetch_new_emails.py  test_global_mail.py  test_global_mail_folders.py  test_history_cleanup.py  test_imap_settings.py  test_imap_worker.py  test_llm_config.py  test_llm_service.py  test_module_enforcement.py  test_modules.py  test_notifications.py  test_order_matcher.py  test_orders.py  test_queue_api.py  test_queue_retention.py  test_queue_settings_api.py  test_queue_startup_reset.py  test_queue_worker.py  test_scan_history.py  test_sender_addresses.py  test_smtp.py  test_system.py  test_users.py  test_version.py  test_watched_folder_overrides.py
(+192 files in other folders)
